main.css
/* GLOBAL STYLES */
img {
  max-width: 100%;
  display: block;
}

h1 {
  font-family: "Montserrat", sans-serif;
  letter-spacing: -0.3rem;
  font-size: 5rem;
  font-weight: 200;
  color: #e1eafd;
  transition: all;
  transition-duration: 0.35s;
}

h2 {
  font-family: "Montserrat", sans-serif;
  font-weight: 900;
}

/* BACKGROUND COLORS */
.dark-background {
  background-color: #302f38 !important;
}

.light-background {
  background-color: #fcd232;
}

/*BTN STYLES */
.primary-btn-color {
  background-color: #eb3b3b !important;
}

.primary-btn {
  transition: all 0.3s ease-in-out;
}

.primary-btn:hover {
  transform: scale(1.03);
}

/* FONTS */

.font-size-small {
  font-size: 0.8rem;
}

/* ICONS */
.fa-solid {
  color: white;
  z-index: 4;
}

.fa-heart {
  color: #eb3b3b;
}

/* NAVBAR */
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 999;
  box-shadow: 0px 2px 5px 2px rgba(50, 50, 50, 0.3);
}

nav .logo {
  width: 3%;
  font-size: 0.8rem;
}

.nav-link {
  color: #414344 !important;
}

.nav-link:hover {
  border-radius: 50px;
  background: #e0e0e0;
  box-shadow: inset 20px 20px 15px #e9c32d, inset -20px -20px 15px #e9c32d;
}

/* BANNER */
.banner {
  height: 100vh;
  background-image: url("./assets/office04.jpg");
  background-size: cover;
  background-position: center;
}

.overlay {
  background-color: rgba(5, 5, 5, 0.7);
  height: 100%;
}

.hovered {
  color: #ffffff;
  font-weight: 600;
}

.hovered-siblings {
  color: #e8edf9;
  font-weight: 400;
}

/* filters */
.filters {
  position: sticky;
  top: 55px;
  z-index: 800;
  transition: all 0.3s ease-in-out;
}

/* scroll */
.scroll-down .filters {
  transform: translate3d(0, -100%, 0);
}

.scroll-up .filters {
  box-shadow: 0px 2px 5px 2px rgba(50, 50, 50, 0.3);
}

.single-filter {
  cursor: pointer;
  transition: background-color 0.5s ease-in-out;
}

.single-filter:hover {
  background-color: #b0afaf !important;
  color: #302f38 !important;
}

.filters label {
  color: white;
  cursor: pointer;
  text-align: justify;
}

/* CARDS */
.single-item {
  transition: all 0.3s ease-in-out;
}

.single-item:hover {
  transform: scale(1.07);
}

.single-card {
  box-shadow: 0px 2px 5px 2px rgba(50, 50, 50, 0.3);
  border: none;
  transition: all 0.3s ease-in-out;
}

.single-card:hover {
  box-shadow: 0px 5px 5px 5px rgba(50, 50, 50, 0.3);
}

.card-img-top {
  transition: all 0.3s ease-in-out;
}

.card-img-top:hover {
  transform: scale(1.07);
}

/* FORM */
.body-form {
  padding-top: 61.64px;
}

form input {
  font-style: normal;
}

form input::placeholder {
  font-size: 0.8rem;
  font-style: italic;
}

form option:hover {
  background-color: #b0afaf;
}

label.error {
  color: #eb3b3b;
  font-size: 0.6rem;
  font-weight: bold;
  margin-bottom: 0px;
}

.h1-form {
  font-size: 3rem;
}

/* MEDIA QUERY  */
@media (min-width: 769px) {
  .navbar {
    background-color: #fcd232 !important;
  }

  #logoName {
    color: #302f38 !important;
    font-size: 0.6rem !important;
  }


}

@media (max-width: 768px) {
  body {
    padding-top: unset;
  }

  nav .show {
    background-color: #302f38 !important;
    min-height: 100vh !important;
  }

  .logo img {
    display: none !important;
  }

  #logoName {
    margin-left: 25px;
  }

  #navIcon {
    margin-right: -10px;
  }

  .nav-link {
    color: #e1eafd !important;
    margin: 5px 0;
  }

  .nav-link:hover {
    border-radius: 50px;
    background: transparent;
    box-shadow: inset 20px 20px 15px #e9c32d00, inset -20px -20px 15px #e9c32d00;
  }

  .filters {
    position: static;
    font-size: 0.8rem;
  }

  .single-filter:nth-child(2) {
    border-left: none !important;
    border-right: none !important;
    border-top: 1px solid white;
    border-bottom: 1px solid white;
  }

  .cards-container {
    width: 100% !important;
  }

  .single-item {
    display: none;		
  }

  .single-item:nth-child(-n + 6) {
    display: flex;
  }

  .single-item:hover {
    transform: none;
  }

  .card-img-top:hover {
    transform: none;
  }

  .form-footer {
    position: static !important;
  }
}

@media (max-width: 426px) {
  h1 {
    font-size: 3.5rem;
  }

  .banner {
    min-height: 80vh;
  }

  .logo {
    margin-left: 20px !important;
  }
}

